--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -14,6 +14,8 @@ body {
   font-family: Hiragino Sans GB, "Hiragino Sans GB", Helvetica, "Microsoft YaHei", Arial,sans-serif;
 }
 
+@import "topic_body";
+
 /* header */
 
 .navbar-static-top {
@@ -139,6 +141,19 @@ body {
       margin-bottom: 12px;
       border: 0;
       border-top: 1px solid #dcebf5;
+    }
+  }
+}
+
+.topics-show-page {
+
+  .panel {
+    padding: 15px;
+
+    h1 {
+      margin: 0.4em auto 0.6em;
+      font-size: 28px;
+      line-height: 38px;
     }
   }
 }
